--- a/Date Count/style.css
+++ b/Date Count/style.css
@@ -945,7 +945,7 @@ html, body{
 .event-type-color .color-options:hover {
     background-color: #ccc;
     box-shadow: 0 0 10px rgba(0, 123, 255, 0.5);
-    scale: 1.1;
+    
 }
 
 .event-type-color .color-options:hover i.fa-caret-down {
@@ -954,20 +954,13 @@ html, body{
 }
 
 .event-type-color .color-option {
-  width: 20px;
-  height: 20px;
-  background-color: #1a73e8;
-  border-radius: 50%;
-  margin-right: 5px;
-  cursor: pointer;
-}
-
-.event-type-color .color-option {
     width: 20px;
     height: 20px;
+    background-color: #1a73e8;
     display: inline-block;
     border-radius: 50%;
-    margin: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
     cursor: pointer;
 }
 
@@ -977,16 +970,18 @@ html, body{
     top: 40px;
     left: 0;
     z-index: 10;
-    background-color: white;
+    background-color: rgb(152, 152, 152);
     border: 1px solid #ccc;
-    padding: 10px;
+    padding: 5px;
     border-radius: 5px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .color-option.selected {
-    border: 3px solid #fff;
+    scale: 1.3;
+    border: 2px solid #ccc;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease-in-out;
 }
 
 #toggle-colors {
@@ -1014,11 +1009,12 @@ html, body{
     border-radius: 50%; /* Optional: Makes the color blocks round */
 
 }
-.color-option:hover {
+
+/* .color-option:hover {
     scale: 1.2;
     border-color: #ffffff;
     box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
-}
+} */
 
 .color-options{
     position: relative;
@@ -1035,26 +1031,26 @@ html, body{
     border-radius: 10px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease-in-out;
+    width: 100%;
 }
 
 .color-options .hidden-colors.show {
-    display: block;
+    display: inline-block;
     opacity: 1;
     transform: scale(1);
     transition: all 0.3s ease-in-out;
     
 }
 
-.test{
-    padding: 5px;
-    background-color: aqua;
-}
-
 .color-options .hidden-colors .color-option:hover {
-    padding: 5px;
-    border-color: #ffffff;
-    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+    /* border-color: #ffffff;
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5); */
+    scale: 1.2;
+    border: none;
+    padding: 10px 5px;
     transition: all 0.3s ease-in-out;
+    width: 100%;
+    border-radius: 5px;
 }
 
 .hidden-colors .color-option:first-child {
